test/libhyperion/syntaxTests/types/contractTypeType/members/assign_function_via_base_name_to_var.hyp
contract A {
    function f() external {}
    function g() external pure {}
}

contract B is A {
    function h() external {
        function() external f = A.f;
        function() external pure g = A.g;
    }
}
// ----
// TypeError 4888: (133-154): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
